<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <SurfaceView
        android:id="@+id/surfaceView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:visibility="visible" />

    <LinearLayout
        android:id="@+id/menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="#FFFFFFFF"
        android:orientation="vertical"
         >
         
		<LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal" >
            
        <CheckBox
            android:id="@+id/use_rc"
            android:text="@string/use_rc"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>		    
            
        <TextView
            android:id="@+id/rc_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="" />
        
        
		    
		    </LinearLayout>>
         






 
		<LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal" >
            
		    
        <Button
            android:id="@+id/btn_choose_rccode"
            android:text="@string/rc_code"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>		    
            
        <TextView
            android:id="@+id/rc_code_file"
			android:layout_marginLeft="20dip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="" />
        
        
		    
		    </LinearLayout>>
		    
		    
		<TextView
            android:id="@+id/IPAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="" />
		            
		            
		    

<LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal" >
        
    	<CheckBox 
    	    android:id="@+id/check_password"
            android:text="@string/check_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>	
            
		    
        <Button
            android:id="@+id/btn_create_qrcode"
            android:text="@string/create_qrcode"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>		    
            
        <ImageView
            android:id="@+id/img_qrcode"
            android:layout_width="200px"
            android:layout_height="200px"
            android:layout_gravity="center"
            android:text="" />
        
        
		    
		    </LinearLayout>>


            

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/quality" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal" >

            <RadioGroup
                android:id="@+id/quality_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:orientation="horizontal" >

                <RadioButton
                    android:id="@+id/quality_fullhd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/full_hd" />

                <RadioButton
                    android:id="@+id/quality_hd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hd" />

                <RadioButton
                    android:id="@+id/quality_dvd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dvd" />
            </RadioGroup>

            <Button
                android:id="@+id/btnPlay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_play" />
            <Button
                android:id="@+id/btnStop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_stop" />
                        
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" >

            <Button
                android:id="@+id/btnBackgrund"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_background" />

            <Button
                android:id="@+id/btnExit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_exit" />
        </LinearLayout>
    </LinearLayout>

</FrameLayout>